# News-Up

./: License.md  README.md  app.py  dummy.py  environment.yml  news_dict.json  requirements.txt
key_ext/: config.json  tokenizer.json  tokenizer_config.json
key_ext_small/: config.json  tokenizer_config.json
poetry-demo/: pyproject.toml
utils/: data_api.py  keyword_extraction.py  ner.py  news_dict.json  newscontent.py  summarizer.py  tts.py
